--- a/.htaccess
+++ b/.htaccess
@@ -185,3 +185,5 @@ AddEncoding gzip svgz
   # Disable content sniffing, since it's an attack vector.
   Header always set X-Content-Type-Options nosniff
 </IfModule>
+RewriteEngine on
+RewriteRule index\.html index.php [NC,R]
